--- a/campaign/index.html
+++ b/campaign/index.html
@@ -96,9 +96,9 @@
 				<div class="terms">
 					<h2>応募規約</h2>
 					<div class="te-txt">
-						<p>○○○○○○○○○○○○○○○○○○○○○○○○<br/>
-						○○○○○○○○○○○○○○○○○○○○○</p>
-						<p>○○○○○○○○○○○○○○○○○○○○○○○○○</p>
+						<p>美味しい<br/>
+						タルト</p>
+						<p>たくさん食べる</p>
 					</div>
 				</div>
 			</section>
